DT-2519 - Fix for logo overlapping page at mobile

--- a/less/header-style.less
+++ b/less/header-style.less
@@ -149,6 +149,10 @@
     @media @tablet {
         max-width: 400px;
     }
+    
+    @media @mobile {
+        max-width: 100%;
+    }
 }
 
 .company-link:hover {
